--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
       padding: 2rem;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      max-width: 420px;
+    }
+    .icon {
+      width: 80px;
+      height: 80px;
+      margin: 0 auto 1rem auto;
     }
     h1 {
       color: #0066cc;
+      margin-bottom: 0.5rem;
     }
     p {
       margin-top: 0.5rem;
@@ -33,7 +40,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>🚀 Entorno de Desarrollo</h1>
+    <div class="icon">
+      <!-- Casco de construcción SVG -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none">
+        <path d="M32 6c-11 0-20 9-20 20v8H8v8h48v-8h-4v-8c0-11-9-20-20-20z" fill="#ffcc00" stroke="#333" stroke-width="2"/>
+        <path d="M32 6v28" stroke="#333" stroke-width="2"/>
+        <path d="M20 26v8M44 26v8" stroke="#333" stroke-width="2"/>
+      </svg>
+    </div>
+    <h1>Entorno de Desarrollo</h1>
     <p>Estás en <strong>dev.casadelaire.es</strong></p>
     <p>La página web está en construcción.</p>
   </div>
