primer cambio en el index

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <h1>Entorno de Desarrollo</h1>
     <p>Estás en <strong>dev.casadelaire.es</strong></p>
-    <p>La página web está en construcción.</p>
+    <p>La página web sigue en construcción.</p>
   </div>
 </body>
 </html>
