--- a/index.html
+++ b/index.html
@@ -1,56 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Entorno de Desarrollo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
-      color: #333;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-    .container {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      max-width: 420px;
-    }
-    .icon {
-      width: 80px;
-      height: 80px;
-      margin: 0 auto 1rem auto;
-    }
-    h1 {
-      color: #0066cc;
-      margin-bottom: 0.5rem;
-    }
-    p {
-      margin-top: 0.5rem;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="icon">
-      <!-- Casco de construcción SVG -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none">
-        <path d="M32 6c-11 0-20 9-20 20v8H8v8h48v-8h-4v-8c0-11-9-20-20-20z" fill="#ffcc00" stroke="#333" stroke-width="2"/>
-        <path d="M32 6v28" stroke="#333" stroke-width="2"/>
-        <path d="M20 26v8M44 26v8" stroke="#333" stroke-width="2"/>
-      </svg>
-    </div>
-    <h1>Entorno de Desarrollo</h1>
-    <p>Estás en <strong>dev.casadelaire.es</strong></p>
-    <p>La página web sigue en construcción.</p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Título genérico (se sobreescribe con React Helmet) -->
+    <title>La Casa del Aire</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon.svg" />
+    <link rel="apple-touch-icon" href="/src/assets/icons/apple-touch-icon.svg" />
+
+    <!-- Color de tema en móviles -->
+    <meta name="theme-color" content="#ffffff" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- React inyecta aquí la aplicación -->
+  </body>
 </html>
+
+
