cambios en el favicon.ico

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <!-- Título genérico (se sobreescribe con React Helmet) -->
     <title>La Casa del Aire</title>
 
-    <!-- Favicon clásico en raíz (fallback para navegadores/Google) -->
+    <!-- Favicon clásico en raíz -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Favicon generado por Vite (cache busting) -->
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
 
     <!-- Favicons generados por Vite con hash (cache busting) -->
     <link
